hphp/test/zend/bad/ext/date/tests/bug26317.php
<?php
	echo date("Y-m-d H:i:s\n", strtotime("2003-11-19 16:20:42 Z"));
	echo date("Y-m-d H:i:s\n", strtotime("2003-11-19 09:20:42 T"));
	echo date("Y-m-d H:i:s\n", strtotime("2003-11-19 19:20:42 C"));
?>